# NERenderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fragmentShader.fs.glsl  lines.py  main.cpp
HypersphereManifold/: HypersphereManifold.cpp  HypersphereManifold.h  findGeodesic.cl  getPoint.cl
SymbolicCalculation/: main.py  manifold.py
gl/: fragmentShader.fs  vertexShader.vs  vertexShader.vs.glsl
include/: Camera.h  Geodesic.h  Manifold.h  Mesh.h  Model.h  NERenderer.h  Object.h  OpenCL.h  Shader.h  Texture.h  VertexManager.h  Window.h
include/glad/: glad.h
resources/augustus/: EmperorAugustus.mtl
resources/hutao/: license.txt  scene.gltf
resources/inugami_korone_hololive/: license.txt  scene.gltf
resources/minecraft_grass_block/: scene 2.gltf
resources/pikamee_voms/: license.txt  scene.gltf
resources/yanfei/: license.txt  scene.gltf
src/: Camera.cpp  Geodesic.cpp  Manifold.cpp  Mesh.cpp  Model.cpp  NERenderer.cpp  Object.cpp  OpenCL.cpp  Texture.cpp  VertexManager.cpp  Window.cpp  glad.c
